--- a/WebApiCourses/Views/CourseShedules/Delete.cshtml
+++ b/WebApiCourses/Views/CourseShedules/Delete.cshtml
@@ -1,13 +1,14 @@
-﻿@model WebApiCourses.Models.CourseSchedule
+﻿@model WebApiCourses.Models.CourseShedule
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CourseSchedule</h4>
+    <h4>CourseShedule</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -35,8 +36,10 @@
             @Html.DisplayFor(model => model.Hours)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.CourseScheduleID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="CourseScheduleID" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
