--- a/WebApiCourses/Views/CourseShedules/Details.cshtml
+++ b/WebApiCourses/Views/CourseShedules/Details.cshtml
@@ -1,14 +1,13 @@
-﻿@model WebApiCourses.Models.CourseSchedule
+﻿@model WebApiCourses.Models.CourseShedule
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
 }
 
-<h1>Delete</h1>
+<h1>Details</h1>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CourseSchedule</h4>
+    <h4>CourseShedule</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -36,10 +35,8 @@
             @Html.DisplayFor(model => model.Hours)
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CourseScheduleID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model?.CourseSheduleID">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
