--- a/WebApiCourses/Views/CourseShedules/Edit.cshtml
+++ b/WebApiCourses/Views/CourseShedules/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApiCourses.Models.CourseSchedule
+﻿@model WebApiCourses.Models.CourseShedule
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>CourseSchedule</h4>
+<h4>CourseShedule</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
