доделаны все контроллеры

--- a/WebApiCourses/Views/Teachers/Index.cshtml
+++ b/WebApiCourses/Views/Teachers/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.Patronymic)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                @Html.DisplayNameFor(model => model.Phone)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ExperienceYears)
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.Patronymic)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PhoneNumber)
+                @Html.DisplayFor(modelItem => item.Phone)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ExperienceYears)
