--- a/WebApiCourses/Views/Home/Index.cshtml
+++ b/WebApiCourses/Views/Home/Index.cshtml
@@ -1,16 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>React App</title>
+</head>
 
-<div id="root"></div>
-
-<script src="~/static/js/main.376119f0.js"></script>
-
-<script>
-    ReactDOM.render(
-      <React.StrictMode>
-        <App />
-      </React.StrictMode>,
-      document.getElementById('root')
-    );
-</script>
+</html>
