--- a/WebApiCourses/Views/Teachers/Details.cshtml
+++ b/WebApiCourses/Views/Teachers/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.Patronymic)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PhoneNumber)
+            @Html.DisplayNameFor(model => model.Phone)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
+            @Html.DisplayFor(model => model.Phone)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ExperienceYears)
